--- a/apps/hs/qua-server/stack.yaml
+++ b/apps/hs/qua-server/stack.yaml
@@ -2,6 +2,9 @@ extra-deps:
   - yesod-auth-oauth-1.4.1.1
     # authenticate-oauth patched package, remains here until comes to stackage
   - authenticate-oauth-1.6
+    # ETH login via LDAP
+  - yesod-auth-ldap-native-0.2.0.0
+  - ldap-client-0.1.0
     # LTI interop client
   - ltiv1p1-1.0.0.2
 
