design submission client side and server stub

--- a/apps/hs/qua-server/qua-server.cabal
+++ b/apps/hs/qua-server/qua-server.cabal
@@ -69,6 +69,7 @@ library
         Handler.Mooc
         Handler.Mooc.EdxLogin
         Handler.Mooc.RenameMe
+        Handler.Mooc.SubmitProposal
         Handler.QuaViewSettings
         Import
         Import.NoFoundation
