--- a/apps/hs/qua-server/qua-server.cabal
+++ b/apps/hs/qua-server/qua-server.cabal
@@ -54,7 +54,6 @@ library
     exposed-modules:
         Application
         Foundation
-        Foundation.Criteria
         Handler.About
         Handler.Common
         Handler.Feedback
@@ -80,6 +79,7 @@ library
         Handler.Mooc.RenameMe
         Handler.Mooc.Scenario
         Handler.Mooc.SubmitProposal
+        Handler.Mooc.Tests
         Handler.Mooc.ViewProposal
         Handler.QuaViewSettings
         Import
@@ -133,6 +133,7 @@ library
         case-insensitive -any,
         wai -any,
         stm -any,
+        random -any,
         ltiv1p1 -any
     default-language: Haskell2010
     default-extensions: TemplateHaskell QuasiQuotes OverloadedStrings
