--- a/apps/hs/qua-server/qua-server.cabal
+++ b/apps/hs/qua-server/qua-server.cabal
@@ -94,40 +94,40 @@ library
         Settings.StaticFiles
     build-depends:
         base >=4 && <5,
-        yesod >=1.4.3 && <1.5,
-        yesod-core >=1.4.17 && <1.5,
-        yesod-auth >=1.4.0 && <1.5,
-        yesod-static >=1.4.0.3 && <1.6,
-        yesod-form >=1.4.0 && <1.5,
+        yesod >=1.4.3,
+        yesod-core >=1.4.17,
+        yesod-auth >=1.4.0,
+        yesod-static >=1.4.0.3,
+        yesod-form >=1.4.0,
         yesod-websockets -any,
         yesod-auth-ldap-native >=0.2.0.0,
-        transformers >=0.4.2.0 && <0.5,
+        transformers >=0.4.2.0,
         ldap-client >=0.1.0,
         classy-prelude >=0.10.2,
         classy-prelude-conduit >=0.10.2,
         classy-prelude-yesod >=0.10.2,
         blaze-markup >=0.7.1,
-        bytestring >=0.9 && <0.11,
+        bytestring >=0.9,
         base64-bytestring -any,
-        text >=0.11 && <2.0,
-        persistent >=2.0 && <2.6,
-        persistent-template >=2.0 && <2.6,
+        text >=0.11,
+        persistent >=2.0,
+        persistent-template >=2.0,
         template-haskell -any,
-        shakespeare >=2.0 && <2.1,
+        shakespeare >=2.0,
         hjsmin >=0.1 && <0.3,
-        monad-control >=0.3 && <1.1,
-        wai-extra >=3.0 && <3.1,
-        yaml >=0.8 && <0.9,
-        http-conduit >=2.1 && <2.2,
-        directory >=1.1 && <1.3,
-        warp >=3.0 && <3.3,
+        monad-control >=0.3,
+        wai-extra >=3.0,
+        yaml >=0.8,
+        http-conduit >=2.1,
+        directory >=1.1,
+        warp >=3.0,
         data-default -any,
-        aeson >=0.6 && <0.12,
-        conduit >=1.0 && <2.0,
-        conduit-extra >=1.0 && <2.0,
-        monad-logger >=0.3 && <0.4,
-        fast-logger >=2.2 && <2.5,
-        wai-logger >=2.2 && <2.3,
+        aeson >=0.6,
+        conduit >=1.0,
+        conduit-extra >=1.0,
+        monad-logger >=0.3,
+        fast-logger >=2.2,
+        wai-logger >=2.2,
         file-embed -any,
         safe -any,
         unordered-containers -any,
