--- a/libs/hs/luci-connect/luci-connect.cabal
+++ b/libs/hs/luci-connect/luci-connect.cabal
@@ -36,7 +36,7 @@ library
         Luci.Connect.Base
         Luci.Messages
     build-depends:
-        base >=4.8.2 && <4.9,
+        base >=4.8.2 && <5.0,
         conduit >=1.0.0,
         conduit-extra -any,
         monad-control -any,
@@ -68,7 +68,7 @@ executable luci-test
         buildable: False
     main-is: LuciTest.hs
     build-depends:
-        base >=4.8.2 && <4.9,
+        base >=4.8.2 && <5.0,
         aeson -any,
         text -any,
         bytestring >=0.10.6.0,
@@ -84,7 +84,7 @@ executable luci-console
         buildable: False
     main-is: LuciConsole.hs
     build-depends:
-        base >=4.8.2 && <4.9,
+        base >=4.8.2 && <5.0,
         aeson -any,
         text -any,
         bytestring >=0.10.6.0,
@@ -101,7 +101,7 @@ executable adding-numbers-service
         buildable: False
     main-is: AddingNumbersService.hs
     build-depends:
-        base >=4.8.2 && <4.9,
+        base >=4.8.2 && <5.0,
         aeson -any,
         text -any,
         luci-connect -any
@@ -114,22 +114,28 @@ executable dist-walls-service
     if !flag(examples)
         buildable: False
     main-is: DistToWallsService.hs
+    other-modules:
+        Lib.Scenario
+        Lib.ExtraTypes
+        Lib.ParseGeoJSON
     build-depends:
-        base >=4.8.2 && <4.9,
+        base >=4.8.2 && <5,
         aeson -any,
         text -any,
         vector -any,
         conduit -any,
         conduit >=1.2.6.6,
         unordered-containers >=0.2.7.0,
+        containers -any,
+        parallel -any,
         bytestring >=0.10.6.0,
-        fastvec -any,
+        easytensor -any,
         geojson -any,
         lens -any,
         luci-connect -any
     default-language: Haskell2010
     hs-source-dirs: examples
-    ghc-options: -Wall -ferror-spans -fllvm -O2 -fenable-rewrite-rules
+    ghc-options: -Wall -ferror-spans -O2 -fenable-rewrite-rules
 
 executable multi-parametric-service
 
@@ -137,19 +143,21 @@ executable multi-parametric-service
         buildable: False
     main-is: MultiParametricService.hs
     build-depends:
-        base >=4.8.2 && <4.9,
+        base >=4.8.2 && <5.0,
         aeson -any,
         text -any,
         vector -any,
         conduit -any,
         conduit >=1.2.6.6,
         unordered-containers >=0.2.7.0,
+        containers -any,
+        parallel -any,
         bytestring >=0.10.6.0,
-        fastvec -any,
+        easytensor -any,
         geojson -any,
         lens -any,
         luci-connect -any
     default-language: Haskell2010
     hs-source-dirs: examples
-    ghc-options: -Wall -ferror-spans -fllvm -O2 -fenable-rewrite-rules
+    ghc-options: -Wall -ferror-spans -O2 -fenable-rewrite-rules
 
