dist-walls-service done and fixed; fast and easy to install

--- a/libs/hs/luci-connect/luci-connect.cabal
+++ b/libs/hs/luci-connect/luci-connect.cabal
@@ -142,6 +142,10 @@ executable multi-parametric-service
     if !flag(examples)
         buildable: False
     main-is: MultiParametricService.hs
+    other-modules:
+        Lib.Scenario
+        Lib.ExtraTypes
+        Lib.ParseGeoJSON
     build-depends:
         base >=4.8.2 && <5.0,
         aeson -any,
