--- a/services/siren/siren.cabal
+++ b/services/siren/siren.cabal
@@ -16,6 +16,7 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Lib
+                       Lib.Model
   build-depends:       base >= 4.9 && < 5,
                        bytestring -any,
                        text -any,
