--- a/services/siren/siren.cabal
+++ b/services/siren/siren.cabal
@@ -11,6 +11,7 @@ copyright:           (c) Artem Chirkin
 category:            Web
 build-type:          Simple
 extra-source-files:  README.md
+                     sql/*.sql
 cabal-version:       >=1.10
 
 library
@@ -19,12 +20,9 @@ library
   build-depends:       base >= 4.9 && < 5,
                        bytestring -any,
                        text -any,
-                       persistent -any,
-                       persistent-template -any,
-                       template-haskell -any,
-                       persistent-postgresql -any,
                        postgresql-libpq -any,
                        aeson -any,
+                       file-embed -any,
                        monad-logger >=0.3.19
   default-language:    Haskell2010
   ghc-options:         -Wall -fwarn-tabs
