--- a/libs/hs/helen/helen.cabal
+++ b/libs/hs/helen/helen.cabal
@@ -42,8 +42,8 @@ library
         monad-logger -any,
         cryptonite -any,
         lens -any,
-        containers >=0.5.6.2 && <0.6,
-        time >=1.4 && <1.6
+        containers >=0.5.6.2,
+        time >=1.4
     default-language: Haskell2010
     hs-source-dirs: src
     ghc-options: -Wall -ferror-spans
@@ -51,7 +51,7 @@ library
 executable helen
     main-is: Main.hs
     build-depends:
-        base >=4.8.2 && <4.9,
+        base >=4.8.2 && <5,
         aeson -any,
         text -any,
         bytestring >=0.10.6.0,
