--- a/libs/hs/helen/stack.yaml
+++ b/libs/hs/helen/stack.yaml
@@ -1,5 +1,7 @@
+resolver: nightly-2017-01-25
+
 extra-deps:
-  - binary-0.8.2.1
+  - validation-0.5.4
 
 flags:
   luci-connect:
@@ -10,14 +12,11 @@ packages:
   - location: ../luci-connect
     extra-dep: true
   - location:
-      git: https://github.com/achirkin/fastvec.git
-      commit: c5c91cac093a751e00958dacab4bc627ad17622b
+      git: https://github.com/achirkin/hs-geojson.git
+      commit: ad9e0f3d80e133d88657832988ab9aff2cb51691
     extra-dep: true
   - location:
-      git: https://github.com/achirkin/hs-geojson.git
-      commit: ef613f30974278112725904894e22410816e7aef
+      git: https://github.com/achirkin/easytensor.git
+      commit: c46c12f16941ce107934d318b92f87ba3b84238b
     extra-dep: true
 
-resolver: lts-6.12
-require-stack-version: ">= 1.1.0"
-extra-package-dbs: []
