--- a/libs/hs/luci-connect/stack.yaml
+++ b/libs/hs/luci-connect/stack.yaml
@@ -1,10 +1,8 @@
-#extra-deps:
-#  - binary-0.8.2.1
+resolver: lts-8.0
 
-flags:
-  luci-connect:
-    examples: true
-    luci-test: true
+extra-deps:
+  - validation-0.5.4
+
 packages:
   - .
   - location:
@@ -13,9 +11,10 @@ packages:
     extra-dep: true
   - location:
       git: https://github.com/achirkin/easytensor.git
-      commit: c46c12f16941ce107934d318b92f87ba3b84238b
+      commit: 5b42983bf223ffe9e341205f1678339c91f01fe1
     extra-dep: true
 
-resolver: lts-7.18
-require-stack-version: ">= 1.1.0"
-extra-package-dbs: []
+flags:
+  luci-connect:
+    examples: true
+    luci-test: true
