--- a/apps/hs/qua-server/qua-server.cabal
+++ b/apps/hs/qua-server/qua-server.cabal
@@ -35,16 +35,16 @@ flag postgresql
         Use PostgreSQL database. Otherwise use sqlite.
 
 library
-    
+
     if ((flag(postgresql) && !flag(dev)) && !flag(library-only))
         cpp-options: -DPOSTGRESQL
-    
+
     if (flag(dev) || flag(library-only))
         cpp-options: -DDEVELOPMENT
         ghc-options: -Wall -fwarn-tabs -O0
     else
         ghc-options: -Wall -fwarn-tabs -O2
-    
+
     if ((flag(postgresql) && !flag(dev)) && !flag(library-only))
         build-depends:
             persistent-postgresql -any
@@ -86,6 +86,7 @@ library
         Handler.Mooc.User
         Handler.Mooc.ViewProposal
         Handler.Mooc.SubmissionViewer
+        Handler.Mooc.FAQ
         Handler.QuaViewSettings
         Import
         Import.NoFoundation
@@ -151,10 +152,10 @@ library
     hs-source-dirs: src
 
 executable qua-server
-    
+
     if ((flag(postgresql) && !flag(dev)) && !flag(library-only))
         cpp-options: -DPOSTGRESQL
-    
+
     if flag(library-only)
         buildable: False
     main-is: main.hs
@@ -164,4 +165,3 @@ executable qua-server
     default-language: Haskell2010
     hs-source-dirs: app
     ghc-options: -threaded -rtsopts -with-rtsopts=-N
-
