Fix qua-server.cabal (added module)

--- a/apps/hs/qua-server/qua-server.cabal
+++ b/apps/hs/qua-server/qua-server.cabal
@@ -54,6 +54,7 @@ library
     exposed-modules:
         Application
         Application.Grading
+        Application.SetupProblemData
         Foundation
         Handler.About
         Handler.Common
