--- a/apps/hs/helen/helen.cabal
+++ b/apps/hs/helen/helen.cabal
@@ -40,6 +40,7 @@ library
         hashable -any,
         transformers-base -any,
         monad-logger -any,
+        fast-logger -any,
         cryptonite -any,
         lens -any,
         containers >=0.5.6.2,
@@ -61,4 +62,3 @@ executable helen
     default-language: Haskell2010
     hs-source-dirs: app
     ghc-options: -Wall -ferror-spans
-
