Showing scenarios in scenario editor

--- a/apps/hs/qua-server/qua-server.cabal
+++ b/apps/hs/qua-server/qua-server.cabal
@@ -146,7 +146,8 @@ library
         wai -any,
         stm -any,
         random -any,
-        ltiv1p1 -any
+        ltiv1p1 -any,
+        esqueleto -any
     default-language: Haskell2010
     default-extensions: TemplateHaskell QuasiQuotes OverloadedStrings
                         NoImplicitPrelude MultiParamTypeClasses TypeFamilies GADTs
