--- a/apps/hs/qua-server/qua-server.cabal
+++ b/apps/hs/qua-server/qua-server.cabal
@@ -153,7 +153,8 @@ library
         stm -any,
         random -any,
         ltiv1p1 -any,
-        esqueleto -any
+        esqueleto -any,
+        resource-pool -any
     default-language: Haskell2010
     default-extensions: TemplateHaskell QuasiQuotes OverloadedStrings
                         NoImplicitPrelude MultiParamTypeClasses TypeFamilies GADTs
