--- a/services/siren/siren.cabal
+++ b/services/siren/siren.cabal
@@ -18,8 +18,8 @@ library
   hs-source-dirs:      src
   exposed-modules:     Lib
   build-depends:       base >= 4.9 && < 5,
-                       aeson -any,
                        bytestring >=0.10.6.0,
+                       luci-connect -any,
                        postgresql-libpq -any,
                        file-embed -any
   default-language:    Haskell2010
