Made it possible to specify trusted clients in the environment

--- a/apps/hs/helen/helen.cabal
+++ b/apps/hs/helen/helen.cabal
@@ -41,6 +41,7 @@ library
         conduit-extra -any,
         unordered-containers -any,
         stm -any,
+        split -any,
         hashable -any,
         transformers-base -any,
         monad-logger -any,
