--- a/apps/hs/qua-server/qua-server.cabal
+++ b/apps/hs/qua-server/qua-server.cabal
@@ -103,6 +103,7 @@ library
         Handler.Mooc.SubmissionViewer
         Handler.Mooc.FAQ
         Handler.QuaViewSettings
+        Handler.Viewer
         Import
         Import.NoFoundation
         Import.Util
@@ -166,7 +167,8 @@ library
         random -any,
         ltiv1p1 -any,
         esqueleto -any,
-        resource-pool -any
+        resource-pool -any,
+        qua-types >= 0.1
     default-language: Haskell2010
     default-extensions: TemplateHaskell QuasiQuotes OverloadedStrings
                         NoImplicitPrelude MultiParamTypeClasses TypeFamilies GADTs
