--- a/apps/hs/qua-server/stack.yaml
+++ b/apps/hs/qua-server/stack.yaml
@@ -12,6 +12,8 @@ flags: {}
 packages:
   - .
   - ../../../libs/hs/luci-connect
+  - location: ../../../libs/hs/qua-types
+    extra-dep: true
 resolver: lts-8.21
 require-stack-version: ">= 1.1.0"
 extra-package-dbs: []
