consistently rename scenario_problem/task/problem to exercise
this requires the following migration:

ALTER TABLE "scenario_problem"  RENAME TO "exercise";
ALTER TABLE "scenario"          RENAME COLUMN "task_id" TO "exercise_id";
ALTER TABLE "current_scenario"  RENAME COLUMN "task_id" TO "exercise_id";
ALTER TABLE "problem_criterion" RENAME TO "exercise_criterion";
ALTER TABLE "problem_criterion" RENAME COLUMN "problem_id" TO "exercise_id";
ALTER TABLE "vote_rating"       RENAME COLUMN "problem_id" TO "exercise_id";
ALTER TABLE "rating"            RENAME COLUMN "problem_id" TO "exercise_id";

--- a/apps/hs/qua-server/qua-server.cabal
+++ b/apps/hs/qua-server/qua-server.cabal
@@ -84,7 +84,7 @@ library
         Handler.Mooc.ExpertReview
         Handler.Mooc.ProposalPreview
         Handler.Mooc.RenameMe
-        Handler.Mooc.ScenarioProblem
+        Handler.Mooc.Exercise
         Handler.Mooc.Survey
         Handler.Mooc.Tests
         Handler.Mooc.User
