--- a/apps/hs/qua-server/stack.yaml
+++ b/apps/hs/qua-server/stack.yaml
@@ -11,7 +11,8 @@ extra-deps:
 flags: {}
 packages:
   - .
-  - ../../../libs/hs/luci-connect
+  - location: ../../../libs/hs/luci-connect
+    extra-dep: true
   - location: ../../../libs/hs/qua-types
     extra-dep: true
 resolver: lts-8.21
