--- a/apps/hs/qua-server/qua-server.cabal
+++ b/apps/hs/qua-server/qua-server.cabal
@@ -73,7 +73,7 @@ library
         Handler.Mooc.Admin
         Handler.Mooc.Admin.CriterionEditor
         Handler.Mooc.Admin.ReviewRequest
-        Handler.Mooc.Admin.ScenarioEditor
+        Handler.Mooc.Admin.ExerciseEditor
         Handler.Mooc.Admin.UserManager
         Handler.Mooc.Admin.LuciScenarioDownloader
         Handler.Mooc.BrowseProposals
