--- a/apps/hs/qua-server/qua-server.cabal
+++ b/apps/hs/qua-server/qua-server.cabal
@@ -122,6 +122,7 @@ library
         classy-prelude-conduit >=0.10.2,
         classy-prelude-yesod >=0.10.2,
         blaze-markup >=0.7.1,
+        blaze-html -any,
         bytestring >=0.9,
         base64-bytestring -any,
         text >=0.11,
