--- a/libs/hs/qua-types/qua-types.cabal
+++ b/libs/hs/qua-types/qua-types.cabal
@@ -19,15 +19,10 @@ library
   other-modules:
                        QuaTypes.Commons
   default-language:    Haskell2010
+  build-depends:       base >= 4.8 && < 5
+                     , time >= 0.1.0.0
   if impl(ghcjs)
-      build-depends:
-          ghcjs-base >=0.2.0.0,
-          base >= 4.8 && < 5,
-          text >=1.2.0.0,
-          time >= 0.1.0.0
+    build-depends:     ghcjs-base >= 0.2.0.0
   else
-      build-depends:
-          aeson >= 1.0.2,
-          base >= 4.8 && < 5,
-          text >=1.2.0.0,
-          time >= 0.1.0.0
+    build-depends:     aeson >= 1.0.2
+                     , text >= 1.2.0.0
